# MIUtil

./: CMakeLists.txt  README.md  mathtest.cpp  test.cpp
.github/workflows/: cmake.yml
Scripts/: TestInstall
Src/: CMakeLists.txt  IDGraph.h  SubProcess.h  Vector.h
Src/Math/: Complex.h  FieldType.h  NotchWave.h  Rotator3.h
Src/Src/: FullComparor.h  SortedArray.h  SubProcess.h  Utils.h  Vector.h
Src/Src/Math/: Quaternion.h
